objects/FLODocs__FLO_Scanner_Log__c.object
<CustomObject>
    <description>This record stores the logs of the scanner activity for each record type. A record is created for each type when the bundle is installed.</description>
    <fields>
        <fullName>FLODocs__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Stage__c</fullName>
        <description>This Stage will be calculated based on FLO Customization Records created against the ones the FLO scanner count.

VERIFIED: Means the counts match 
RESCANNER: Means the type should be selected on the scanner page and rescanned. 
DEDUPLICATE: Means that the deduplicate tool should be run. 
NOT DETECTED: Means that no records of that type have been located.</description>
        <formula>IF( FLODocs__Scanner_Count__c = FLODocs__Documented_Record_Count__c, &quot;VERIFIED&quot;, IF(FLODocs__Documented_Record_Count__c &lt; FLODocs__Scanner_Count__c,&quot;RESCANNER&quot;, IF(FLODocs__Documented_Record_Count__c &gt; FLODocs__Scanner_Count__c,&quot;DEDUPLICATE&quot;,&quot;NOT DETECTED&quot;)))</formula>
        <inlineHelpText>This Stage will be calculated based on FLO Customization Records created against the ones the FLO scanner count. For more information see Field description.</inlineHelpText>
        <label>Customization Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Documented_Record_Count__c</fullName>
        <description>This is the number of customization records created by Strongpoint of this type</description>
        <inlineHelpText>This is the number of customization records created by Strongpoint of this type</inlineHelpText>
        <label>Documented Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Retrieved_Stage__c</fullName>
        <description>VERIFIED: Means the counts match 
RESCANNER: Means the type should be selected on the scanner page and rescanned. 
DEDUPLICATE: Means that the deduplicate tool should be run.
NOT DETECTED: Means that no records of that type have been located.</description>
        <formula>IF( FLODocs__Scanner_Count__c = FLODocs__Total_Customization__c, &quot;VERIFIED&quot;, IF(FLODocs__Scanner_Count__c &lt; FLODocs__Total_Customization__c,&quot;RESCANNER&quot;, IF(FLODocs__Scanner_Count__c &gt; FLODocs__Total_Customization__c,&quot;DEDUPLICATE&quot;,&quot;NOT DETECTED&quot;)))</formula>
        <inlineHelpText>VERIFIED: Means the counts match 
RESCANNER: Means the type should be selected on the scanner page and rescanned. 
DEDUPLICATE: Means that the deduplicate tool should be run.
NOT DETECTED: Means that no records of that type have been located.</inlineHelpText>
        <label>Retrieved Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__SObject_Type_Label__c</fullName>
        <description>Custom label to simplify user selection of Customization &quot;data&quot; records. Label format is &quot;data:[namespaceprefix: | null][apiname without __c][:custom | null]</description>
        <inlineHelpText>Custom label to simplify user selection of Customization &quot;data&quot; records. Label format is &quot;data:[namespaceprefix: | null][apiname without __c][:custom | null]</inlineHelpText>
        <label>Object Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Salesforce_Type__c</fullName>
        <label>Salesforce Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__Salesforce_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Scanner_Count__c</fullName>
        <description>This is the number of records identified by the scanner during data gathering.  It corresponds to the number of  items in each type.</description>
        <inlineHelpText>This is the number of records identified by the scanner during data gathering.  It corresponds to the number of  items in each type.</inlineHelpText>
        <label>Scanner Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Customization__c</fullName>
        <description># of total customization based on the entire org. Would be useful to re-scanner based on this number</description>
        <inlineHelpText># of total customization based on the entire org. Would be useful to re-scanner based on this number</inlineHelpText>
        <label>Total Customization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scanner Log</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Salesforce_Type__c</columns>
        <columns>FLODocs__Retrieved_Stage__c</columns>
        <columns>FLODocs__Total_Customization__c</columns>
        <columns>FLODocs__Scanner_Count__c</columns>
        <columns>FLODocs__Documented_Record_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FLO Scanner Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scanner Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>